--- a/recipes/chickenEnchiladas.html
+++ b/recipes/chickenEnchiladas.html
@@ -60,5 +60,26 @@
             1 (12 ounce) jar taco sauce
         </li>
     </ul>
+    <h3>Directions</h3>
+    <ol>
+        <li>
+            Preheat the oven to 350 degrees F (175 degrees C).
+        </li>
+        <li>
+            Heat oil in a nonstick skillet over medium heat. Add chicken and cook until no longer pink and juices run clear, 5 to 7 minutes per side.
+        </li>
+        <li>
+            Transfer chicken to a cutting board and slice into cubes. Return chicken to the skillet.  
+        </li>
+        <li>
+            Add onion, 1 cup Cheddar cheese, sour cream, parsley, oregano, and black pepper. Cook and stir over low heat until cheese melts. Stir in tomato sauce, green pepper, garlic, chili powder, and salt. Add water if needed.
+        </li>
+        <li>
+            Spoon chicken mixture into tortillas and roll into enchiladas. Arrange enchiladas, seam-side down, in a 9x13-inch baking dish. Top with taco sauce and remaining 3/4 cup Cheddar cheese. 
+        </li>
+        <li>
+            Bake in the preheated oven, uncovered, until cheese has melted, about 20 minutes. Let cool briefly before serving.
+        </li>
+    </ol>
 </body>
 </html>
