--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <a href="./recipes/chickenEnchiladas.html" target="_blank">Chicken Enchiladas</a>
+    <ul>
+        <li><a href="./recipes/chickenEnchiladas.html" target="_blank">Chicken Enchiladas</a></li>
+        <li><a href="./recipes/salsaChicken.html" target="_blank">Salsa Chicken</a></li>
+        <li><a href="./recipes/falafel.html" target="_blank">Falafel with Canned Chickpeas</a></li>
+    </ul>
+
 </body>
 </html>
